// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Barrier Step Barrier - Variable view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    />
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test Barrier Step should render edit view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="formGroup md"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      Test_A
                    </span>
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main"
                icon="edit"
                style="vertical-align: middle;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="name"
              >
                name
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="spec.barrierRef"
            >
              pipeline.barrierStep.barrierReference
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.barrierRef"
                        placeholder="pipeline.barrierStep.barrierReferencePlaceholder"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                          icon="caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              caret-down
                            </desc>
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center;"
        >
          <div
            class="bp3-form-group width25"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              pipelineSteps.timeoutLabel
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="10m"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test Barrier Step should render inputSet view 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="bp3-form-group width50"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            pipelineSteps.timeoutLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-fill"
            >
              <input
                class="bp3-input"
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main"
        >
          Errors
        </p>
        <pre>
          {}
        </pre>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test Barrier Step should render inputSet view and test validation - with errors 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="bp3-form-group bp3-intent-danger width50"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            pipelineSteps.timeoutLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-intent-danger bp3-fill"
            >
              <input
                class="bp3-input"
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value=""
              />
            </div>
            <div
              class="bp3-form-helper-text"
            >
              validation.timeout10SecMinimum
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main"
        >
          Errors
        </p>
        <pre>
          {
  "timeout": "validation.timeout10SecMinimum"
}
        </pre>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;

exports[`Test Barrier Step should render inputSet view and test validation 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: 480px 1fr; column-gap: 20px;"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="bp3-form-group bp3-intent-danger width50"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            pipelineSteps.timeoutLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-intent-danger bp3-fill"
            >
              <input
                class="bp3-input"
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value=""
              />
            </div>
            <div
              class="bp3-form-helper-text"
            >
              validation.timeout10SecMinimum
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main"
        >
          Errors
        </p>
        <pre>
          {
  "timeout": "validation.timeout10SecMinimum"
}
        </pre>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card"
    >
      <pre>
        {}

      </pre>
    </div>
  </div>
</div>
`;
